<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.clearjetrewards.MainActivity" >

    <TextView
        android:id="@+id/txtTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text = "@string/txtTittle"
        android:textSize = "30sp" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTittle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10" 
        android:hint= "@string/hint1">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint2" />

    <Button
        android:id="@+id/btnStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/btnStatus"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imgRewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtTittle"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/rewards" />

</RelativeLayout>
